--- a/client/task/task.html
+++ b/client/task/task.html
@@ -1,10 +1,5 @@
-<head>
-  <title>simple-todos</title>
-</head>
-
-<body>
-  <div class="container">
-    <header>
+<template name="home">
+  <header>
       <h1>Todo List {{incompletedCount}}</h1>
       <label class="hide-completed">
         <input type="checkbox" checked="{{hideCompleted}}">
@@ -26,8 +21,8 @@
       {{/each}}  
     </ul>
 
-  </div><!-- container -->
-</body>
+</template>
+
 
 <template name="task">
   <li class="{{#if checked}}checked{{/if}} {{#if private}}private{{/if}}">
@@ -43,6 +38,8 @@
       </button>
     {{/if}}
 
-    <span class="text"><strong>{{username}}</strong> {{text}}</span> 
+    <span class="text"><strong>{{username}}</strong> <a href="{{pathFor route='note'}}">{{text}}</a> </span> 
   </li>
 </template>
+
+
